# ULOT

./: .gitignore  MANIFEST.in  README.md  accuracy_surfaces.py  baselines.py  effect_rho_alpha.py  functional_minimization.py  label_propagation.py  pyproject.toml  requirements.txt  run_ot_solver.py  run_test.py  run_train.py  similarity_mass.py  visus.py
parameter_files/: params_IBC.json  params_SBM.json  params_SBM_10000.json  params_SBM_50000.json  params_SBM_IBC.json
results/ULOT/trained_model/: alp=10_bat=256_dat=SBM_hid=64_hid=16_los=FUGW_lr=0.001_n_e=2000_n_p=10000_num=5_opt=Adam_out=256_ran=True_rho=9_tem=3_tes=0.2_val=0.2.pt  alp=10_bat=256_dat=SBM_hid=64_hid=16_los=FUGW_lr=0.001_n_e=2000_n_p=50000_num=5_opt=Adam_out=256_ran=True_rho=9_tem=3_tes=0.2_val=0.2.pt
results/figure_files/: F_along_step_01_sub  F_along_step_05_sub  G1_nx  G1_nx_alpha  G1_nx_rho  G2_gradient_flow  G2_nx  G2_nx_alpha  G2_nx_rho  G_along_step_01_sub  G_along_step_05_sub  all_P_solver_alpha  all_P_solver_rho  all_P_ulot_alpha  all_P_ulot_rho  all_accuracy_2  all_accuracy_3  alphas  graph_pair  graph_pair_alpha  graph_pair_rho  pos_g1_alpha  pos_g1_rho  pos_g2  pos_g2_alpha  pos_g2_rho  rgb1  rgb1_alpha  rgb1_rho  rgb2  rgb2_alpha  rgb2_rho  rhos
results/solver_losses/: SBM_10000.npy
ulot/: __init__.py  architectures.py  cli.py  fugw.py  losses.py  utils.py  utils_data.py  utils_fugw.py
